src/objects/OAuthConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>OAuth Authentication and Token Settings</description>
    <fields>
        <fullName>clientKey__c</fullName>
        <label>Client Key</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Configuration is enabled</description>
        <label>enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eventName__c</fullName>
        <description>Informe o nome do evento que será publicado para a obtenção do token</description>
        <label>eventName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grantType__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Configuration</label>
</CustomObject>